<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Hold button to report"
                android:textSize="40dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:src="@drawable/acctype_crash" />

                <Button
                    android:id="@+id/btn_crash_opt"
                    style="@style/btn_report"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_carcrash_opt"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acctype_fire"
                    android:layout_weight="3" />
                <Button
                    android:id="@+id/btn_fire_opt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_fire_opt"
                    style="@style/btn_report"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acctype_patient"
                    android:layout_weight="3" />
                <Button
                    android:id="@+id/btn_patient_opt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_patient_opt"
                    style="@style/btn_report"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acctype_animal"
                    android:layout_weight="3" />
                <Button
                    android:id="@+id/btn_animal_opt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_animal_opt"
                    style="@style/btn_report"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acctype_brawl"
                    android:layout_weight="3" />
                <Button

                    android:id="@+id/btn_brawl_opt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_brawl_opt"
                    style="@style/btn_report"
                    android:textSize="25dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/acctype_other"
                    android:layout_weight="3" />
                <Button
                    android:id="@+id/btn_other_opt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/main_report_other_opt"
                    style="@style/btn_report"
                    android:textSize="25dp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/btn_userfalse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/main_userfalse"
        style="@style/btn_safe"
        android:visibility="gone"/>
</LinearLayout>
